--- a/neighborhood-map/index.html
+++ b/neighborhood-map/index.html
@@ -63,7 +63,7 @@
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-    <script src="js/googleapi.js"></script>
+    <script src="js/googleAPI.js"></script>
 
       </body>
     </html>
