fixed image link

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><img src="project5_100.jpg" alt="Classic Arcade Game Clone Picture" ></div>
+                <div class="where"><img src="img/project5_100.jpg" alt="Classic Arcade Game Clone Picture" ></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession">Tokyo Vacation Plan - December 2015</div>
