--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                   <p>As a benefit to my current role within Sprint I began learning programming. I enjoyed what I learned so much that I decided it was time for a career change. I enrolled in Udacity's Front-End Web Developer NanoDegree because it was created in partnership with real companies. Now that I have completed the degree I know I have all the key skills companies want and I am ready to embark on my new career. Check out my many completed projects below.</p>
                 </div>
               </li>
+              <li>
+                <div class="year pull-left">2016</div>
+                <div class="description pull-right">
+                  <h3>Next Steps completing Senior Web Developer NanoDegree</h3>
+                  <p>With completion of the Front-End NanoDegree I realized I need a next step to further prepare me for my new career. In December a Senior Web Developer NanoDegree became available and I took this as a chance to grow and learn more about the developer world.</p>
+                </div>
+              </li>
             </ul>
           </div>
           <!-- EXPERIENCES -->
@@ -74,7 +81,7 @@
             <h2>Experiences</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Google</div>
+                <div class="where">Sprint</div>
                 <div class="year">2008 - Current</div>
               </div>
               <div class="col-xs-9">
@@ -155,19 +162,19 @@
           </div>
           <!-- PROJECTS -->
           <div class="box">
-            <h2>Projects</h2>
+            <h2>Projects <span>(Click on any projcet for a live demo)</span></h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><img src="arcadeGame/projectScreenShot_50.jpg" alt="Classic Arcade Game Clone Picture" ></div>
+                <div class="where"><a href="arcadeGame/index.html"><img src="arcadeGame/projectScreenShot_50.jpg" alt="Classic Arcade Game Clone Picture" ></a></div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Classic Arcade Game - May 2015</div>
+                <div class="profession"><a href="arcadeGame/index.html">Classic Arcade Game - May 2015</a></div>
                 <div class="description">Built a frogger clone using JavaScript, HTML 5 Canvas and CSS. </div>
               </div>
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><img src="img/project5_100.jpg" alt="Classic Arcade Game Clone Picture" ></div>
+                <div class="where"><a href="neighborhood-map/index.html"><img src="img/project5_100.jpg" alt="Tokyo Vacation app picture" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession">Tokyo Vacation Plan - December 2015</div>
