added links to projects

--- a/index.html
+++ b/index.html
@@ -40,13 +40,6 @@
             <h2>Education</h2>
             <ul id="education" class="clearfix">
               <li>
-                <div class="year pull-left">1980</div>
-                <div class="description pull-right">
-                  <h3>I was born in New Jersey</h3>
-                  <p>Born in New Jersey, but moved to Tucson, AZ within 3 months. And that is really where I grew up.</p>
-                </div>
-              </li>
-              <li>
                 <div class="year pull-left">2005</div>
                 <div class="description pull-right">
                   <h3>Northern Arizona University</h3>
@@ -137,9 +130,11 @@
               <div class="item-skills" data-percent="1.00">JavaScript</div>
               <div class="item-skills" data-percent="1.00">HTML</div>
               <div class="item-skills" data-percent="0.90">CSS</div>
+              <div class="item-skills" data-percent="0.75">Meteor</div>
               <div class="item-skills" data-percent="0.75">jQuery</div>
               <div class="item-skills" data-percent="0.50">knockout</div>
               <div class="item-skills" data-percent="0.25">PYTHON</div>
+
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
@@ -179,7 +174,7 @@
                 <div class="where"><a href="http://mehkai.github.io/neighborhood-map/"><img src="img/project5_100.jpg" alt="Tokyo Vacation app picture" ></a></div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Tokyo Vacation Plan - December 2015</div>
+                <div class="profession"><a href="http://mehkai.github.io/neighborhood-map/">Tokyo Vacation Plan - December 2015</a></div>
                 <div class="description">A single-page web application, built using the Knockout framework, that displays a Google Map of an area and various points of interest. Users can search all included landmarks and, when selected, additional information about a landmark is presented from the FourSquare and Wikipedia APIs. </div>
               </div>
             </div>
@@ -188,7 +183,7 @@
                 <div class="where"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html"><img src="img/project1_fullstack.jpg" alt="Movie Trailer python site" ></a></div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Movie Trailer Site - May 2015</div>
+                <div class="profession"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html">Movie Trailer Site - May 2015</a></div>
                 <div class="description">Server-side code written in Python to store a list of my favorite movies, including box art imagery and a movie trailer URL. This data is then served to a web page using HTML and CSS allowing visitors to review these movies and watch the trailers. </div>
               </div>
             </div>
