Updated work experience

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
               </div>
               <div class="col-xs-9">
                 <div class="profession">Program / Project Manager II</div>
-                <div class="description">Defined project deliverables and monitored status of tasks. Drafted action plans and led meetings with department executives to review project status and proposed changes. Delivered status reports to stakeholders for budgeting and planning purposes. Collaborated with cross-functional teams to draft project schedules and plans. Monitored team progress and enforced deadlines. Served as the single point of contact for project scheduling and changes. Developed slideshows and other forms of media to present project progress to the executive team.
-</div>
+                <div class="description">Defined project deliverables and monitored status of tasks. Drafted action plans and
+led meetings with department executives resulting in a 14% decrease in costs related to transferring calls. Delivered status reports to stakeholders for budgeting and planning purposes. Collaborated with cross-functional teams to draft project schedules and plans. Monitored team progress and enforced deadlines. Served as the single point of contact for project scheduling and changes. Developed Power Point presentations and other forms of media to present project progress to the executive team.</div>
               </div>
             </div>
             <div class="job clearfix">
@@ -90,7 +90,8 @@
               </div>
               <div class="col-xs-9">
                 <div class="profession">Event Coordinator</div>
-                <div class="description">Created community at Apartment complex through events, relationships and service. Managed customer event budget. Planned, organized and supported weekly and monthly events. Provided monthly review of costs and benefit results from events related to community retention and growth.</div>
+                <div class="description">Created community at Apartment complex with 200 units through events,
+relationships and service. Managed customer event budget. Planned, organized and supported weekly and monthly events. Provided monthly review of costs and benefit results from events related to customer retention and growth. Used programs and events to drive a 10% reduction in customer churn.</div>
               </div>
             </div>
           </div>
