made images responsive

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             <h2>Projects <span>(Click on any projcet for a live demo)</span></h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="arcadeGame/index.html"><img src="arcadeGame/projectScreenShot_50.jpg" alt="Classic Arcade Game Clone Picture" ></a></div>
+                <div class="where"><a href="arcadeGame/index.html"><img class="img-responsive" src="arcadeGame/projectScreenShot_50.jpg" alt="Classic Arcade Game Clone Picture" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="arcadeGame/index.html">Classic Arcade Game - May 2015</a></div>
@@ -172,7 +172,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="http://mehkai.github.io/neighborhood-map/"><img src="img/project5_100.jpg" alt="Tokyo Vacation app picture" ></a></div>
+                <div class="where"><a href="http://mehkai.github.io/neighborhood-map/"><img class="img-responsive" src="img/project5_100.jpg" alt="Tokyo Vacation app picture" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="http://mehkai.github.io/neighborhood-map/">Tokyo Vacation Plan - December 2015</a></div>
@@ -181,7 +181,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html"><img src="img/project1_fullstack.jpg" alt="Movie Trailer python site" ></a></div>
+                <div class="where"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html"><img class="img-responsive" src="img/project1_fullstack.jpg" alt="Movie Trailer python site" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html">Movie Trailer Site - May 2015</a></div>
