adjusted mobile responsiveness for smaller displays

--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
             <h2>Education</h2>
             <ul id="education" class="clearfix">
               <li>
-                <div class="year pull-left">2005</div>
+                <div class="year pull-left col-xs-3">2005</div>
                 <div class="description pull-right">
                   <h3>Northern Arizona University</h3>
                   <p>Graduated with a degree in Mathematics Secondary Education. .</p>
                 </div>
               </li>
               <li>
-                <div class="year pull-left">2008</div>
+                <div class="year pull-left col-xs-3">2008</div>
                 <div class="description pull-right">
                   <h3>Moved to Denver, Colorado and started working for Sprint</h3>
                   <p>My current position with Sprint is a Program &amp; Project manager. I worked with stake holders to capture the requirements and scope of the project. Identified risk and costs, creating implementation plans for review by the stake holders. All the while I managed multiple ongoing programs and monitored multiple Projects on a daily basis ensuring milestones were completed as expected. I provided solution options when none where readily available and supported projects from end to end. </p>
                 </div>
               </li>
               <li>
-                <div class="year pull-left">2015</div>
+                <div class="year pull-left col-xs-3">2015</div>
                 <div class="description pull-right">
                   <h3>Completed Udacity Front-End Web Developer NanoDegree</h3>
                   <p>As a benefit to my current role within Sprint I began learning programming. I enjoyed what I learned so much that I decided it was time for a career change. I enrolled in Udacity's Front-End Web Developer NanoDegree because it was created in partnership with real companies. Now that I have completed the degree I know I have all the key skills companies want and I am ready to embark on my new career. Check out my many completed projects below.</p>
                 </div>
               </li>
               <li>
-                <div class="year pull-left">2016</div>
+                <div class="year pull-left col-xs-3">2016</div>
                 <div class="description pull-right">
                   <h3>Next Steps completing Senior Web Developer NanoDegree</h3>
                   <p>With completion of the Front-End NanoDegree I realized I need a next step to further prepare me for my new career. In December a Senior Web Developer NanoDegree became available and I took this as a chance to grow and learn more about the developer world.</p>
@@ -73,11 +73,11 @@
           <div class="box">
             <h2>Experiences</h2>
             <div class="job clearfix">
-              <div class="col-xs-3">
+              <div class="col-xs-4 col-sm-3">
                 <div class="where">Sprint</div>
                 <div class="year">2008 - Current</div>
               </div>
-              <div class="col-xs-1"></div>
+
               <div class="col-xs-8">
                 <div class="profession">Program / Project Manager II</div>
                 <div class="description">Defined project deliverables and monitored status of tasks. Drafted action plans and
@@ -85,11 +85,11 @@ led meetings with department executives resulting in a 14% decrease in costs rel
               </div>
             </div>
             <div class="job clearfix">
-              <div class="col-xs-3">
+              <div class="col-xs-4 col-sm-3">
                 <div class="where">Apartment Life</div>
                 <div class="year">2004 - 2008</div>
               </div>
-              <div class="col-xs-1"></div>
+
               <div class="col-xs-8">
                 <div class="profession">Event Coordinator</div>
                 <div class="description">Created community at Apartment complex with 200 units through events,
