--- a/index.html
+++ b/index.html
@@ -174,20 +174,20 @@ relationships and service. Managed customer event budget. Planned, organized and
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="http://mehkai.github.io/neighborhood-map/"><img class="img-responsive" src="img/project5_100.jpg" alt="Tokyo Vacation app picture" ></a></div>
+                <div class="where"><a href="movieTrailer/fresh_tomatoes.html"><img class="img-responsive" src="img/project1_fullstack.jpg" alt="Movie Trailer python site" ></a></div>
               </div>
               <div class="col-xs-9">
-                <div class="profession"><a href="http://mehkai.github.io/neighborhood-map/">Tokyo Vacation Plan - December 2015</a></div>
-                <div class="description">A single-page web application, built using the Knockout framework, that displays a Google Map of an area and various points of interest. Users can search all included landmarks and, when selected, additional information about a landmark is presented from the FourSquare and Wikipedia APIs. </div>
+                <div class="profession"><a href="movieTrailer/fresh_tomatoes.html">Movie Trailer Site - May 2015</a></div>
+                <div class="description">Server-side code written in Python to store a list of my favorite movies, including box art imagery and a movie trailer URL. This data is then served to a web page using HTML and CSS allowing visitors to review these movies and watch the trailers. </div>
               </div>
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html"><img class="img-responsive" src="img/project1_fullstack.jpg" alt="Movie Trailer python site" ></a></div>
+                <div class="where"><a href="neighborhood-map/index.html"><img class="img-responsive" src="img/project5_100.jpg" alt="Tokyo Vacation app picture" ></a></div>
               </div>
               <div class="col-xs-9">
-                <div class="profession"><a href="http://mehkai.github.io/movieTrailer/fresh_tomatoes.html">Movie Trailer Site - May 2015</a></div>
-                <div class="description">Server-side code written in Python to store a list of my favorite movies, including box art imagery and a movie trailer URL. This data is then served to a web page using HTML and CSS allowing visitors to review these movies and watch the trailers. </div>
+                <div class="profession"><a href="neighborhood-map/index.html">Tokyo Vacation Plan - December 2015</a></div>
+                <div class="description">A single-page web application, built using the Knockout framework, that displays a Google Map of an area and various points of interest. Users can search all included landmarks and, when selected, additional information about a landmark is presented from the FourSquare and Wikipedia APIs. </div>
               </div>
             </div>
           </div>
