--- a/neighborhood-map/index.html
+++ b/neighborhood-map/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>My Life in Tokyo</title>
       <link href="css/style.css" rel="stylesheet">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
 
@@ -21,6 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" href="http://www.carlvereen.com"><i class="fa fa-home fa-lg"> Home</i></a>
           <a class="navbar-brand" href="#">Project 5</a>
         </div>
 
@@ -32,6 +34,7 @@
                            click: $root.goToMenu"></a>
                 </li>
             </ul>
+
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
               <!-- <h5 data-bind="text: query"></h5> -->
