Add FCC Tribute page project
Starting new projects adding to landing page and resume

--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@ relationships and service. Managed customer event budget. Planned, organized and
             <h2>Projects <span>(Click on any projcet for a live demo)</span></h2>
             <div class="job clearfix">
               <div class="col-xs-3">
+                <div class="where"><a href="FCC_TributePage/index.html"><img class="img-responsive" src="arcadeGame/projectScreenShot_50.jpg" alt="FCC Tribute Web Page" ></a></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession"><a href="FCC_TributePage/index.html">FCC Tribute Web Page</a></div>
+                <div class="description">Built a tribute web page only using HTML and CSS. </div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
                 <div class="where"><a href="arcadeGame/index.html"><img class="img-responsive" src="arcadeGame/projectScreenShot_50.jpg" alt="Classic Arcade Game Clone Picture" ></a></div>
               </div>
               <div class="col-xs-9">
