corrected photo for web page project link

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             <h2>Projects <span>(Click on any projcet for a live demo)</span></h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="FCC_TributePage/index.html"><img class="img-responsive" src="arcadeGame/projectScreenShot_50.jpg" alt="FCC Tribute Web Page" ></a></div>
+                <div class="where"><a href="FCC_TributePage/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Tribute Web Page" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="FCC_TributePage/index.html">FCC Tribute Web Page</a></div>
