Updated project section with newly completed projects

--- a/index.html
+++ b/index.html
@@ -165,7 +165,34 @@ relationships and service. Managed customer event budget. Planned, organized and
             <h2>Projects <span>(Click on any projcet for a live demo)</span></h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="FCC_TributePage/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Tribute Web Page" ></a></div>
+                <div class="where"><a href="FCC_BuildaTechnicalDocumentationPage/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Technical Documentation web page image" ></a></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession"><a href="FCC_BuildaTechnicalDocumentationPage/index.html">FCC Technical Documentation web page</a></div>
+                <div class="description">Built a Technical Documentation web page only using HTML and CSS. </div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where"><a href="FCC_BuildaProductLandingPage/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Product Landing Web Page image" ></a></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession"><a href="FCC_BuildaProductLandingPage/index.html">FCC Product Landing Web Page</a></div>
+                <div class="description">Built a product landing web page only using HTML and CSS. </div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where"><a href="FCC_BuildaSurveyForm/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Build a Survey Form page image" ></a></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession"><a href="FCC_BuildaSurveyForm/index.html">FCC Build a Survey Form</a></div>
+                <div class="description">Built a survey form web page only using HTML and CSS. </div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where"><a href="FCC_TributePage/index.html"><img class="img-responsive" src="https://lh3.googleusercontent.com/48XovuaO00OiBYLcFYckmkmVbT9h5-BNXuLY91NsDo2YcHTcDynPrYX-ueWybVtb9l1ZXYIrRcSB-eoMx1gPKqgY7deApaboJwzxqBECGvV2n9gJ8HJih8-UleBMvpapX49OkfppAc0=w2400" alt="FCC Tribute Web Page" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="FCC_TributePage/index.html">FCC Tribute Web Page</a></div>
