Updated image links for new projects
corrected screen shots of web pages with new links shared on google photos

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             <h2>Projects <span>(Click on any projcet for a live demo)</span></h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="FCC_BuildaTechnicalDocumentationPage/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Technical Documentation web page image" ></a></div>
+                <div class="where"><a href="FCC_BuildaTechnicalDocumentationPage/index.html"><img class="img-responsive" src="https://lh3.googleusercontent.com/mBJk9mxY7CseuvVi6F-SFgQUWVKI5IC_ortfJsJavinvFVHTuoa8kj8R7DgX2KnrhACIH3k76JOLcilc5bw17BBG_BT9PG5Uj-zbUe0fUAg_dFw08lNOJ_0HXTGujFMaZPoX4LP9KSk=w2400" alt="FCC Technical Documentation web page image" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="FCC_BuildaTechnicalDocumentationPage/index.html">FCC Technical Documentation web page</a></div>
@@ -174,7 +174,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="FCC_BuildaProductLandingPage/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Product Landing Web Page image" ></a></div>
+                <div class="where"><a href="FCC_BuildaProductLandingPage/index.html"><img class="img-responsive" src="https://lh3.googleusercontent.com/8P_PSJnnlFxQKwUzLlziHxNGGjdNxnJEwqV9sj6FI2BzSzV6S6_19x28sO9huytRP0ylfWP8uiQa6KqJDlhQ6pGo0XG2GBDkvOJkFVYyU4WMuWhq9-MOvwH4WfjAXP0Aqbb1QeBJXV8=w2400" alt="FCC Product Landing Web Page image" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="FCC_BuildaProductLandingPage/index.html">FCC Product Landing Web Page</a></div>
@@ -183,7 +183,7 @@ relationships and service. Managed customer event budget. Planned, organized and
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where"><a href="FCC_BuildaSurveyForm/index.html"><img class="img-responsive" src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fmehkai.github.io%2FFCC_TributePage%2Findex.html" alt="FCC Build a Survey Form page image" ></a></div>
+                <div class="where"><a href="FCC_BuildaSurveyForm/index.html"><img class="img-responsive" src="https://lh3.googleusercontent.com/2dkRSK8rGWkzv7Y9xslPkGKEbTMcIPxBv0JGcLxilKpHE7t2xE0y9vrmiue9agSLSTq-w0DDRmDl7zTm4qruKCsHNmAEAb1PBeg906eLqKKDmK1bYMJyPrPRwHSj8oGKw6_U7sEPdwA=w2400" alt="FCC Build a Survey Form page image" ></a></div>
               </div>
               <div class="col-xs-9">
                 <div class="profession"><a href="FCC_BuildaSurveyForm/index.html">FCC Build a Survey Form</a></div>
